2008-04-20  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/main.cpp: Added --data parameter to be used to specify where to
	get the data from when using --skipupdate.

2008-04-19  Yohann Ferreira  <bertram@cegetel.net>

	* src/gui/char_select.cpp: Made the client clean characters
	information to avoid a freeze at relogin with another account.

2008-04-19  Dennis Friis  <peavey@placid.dk>

	* src/Makefile.am: Fix a double entry and add missing files.

2008-04-19  Yohann Ferreira  <bertram@cegetel.net>

	* src/main.h, src/main.cpp, src/net/loginhandler.cpp: Made mislogins
	and misregistrations a little bit less annoying for the user.

2008-04-18  Yohann Ferreira  <bertram@cegetel.net>

	* src/gui/char_select.h, src/gui/char_select.cpp,
	src/gui/unregisterdialog.h, src/gui/unregisterdialog.cpp,
	src/main.cpp, src/main.h, src/logindata.h,
	src/gui/changepassworddialog.h, src/gui/changepassworddialog.cpp,
	src/CMakeLists.txt: Added a change password dialog. State code is to
	be reworked.
	* src/localplayer.h, src/localplayer.cpp: limited keyboard walk message
	flooding to one every 1/10 sec.
	* src/main.h, src/main.cpp, src/net/loginhandler.cpp,
	src/net/logouthandler.cpp, src/gui/unregisterdialog.cpp,
	src/gui/changepassworddialog.cpp: Made Unregister and change password
	functionnal, at least client-side.

2008-04-18  David Athay  <ko2fan@gmail.com>

	* src/gui/chat.h, src/gui/widgets/tabbedarea.h, 
	src/gui/widgets/tabbedarea.cpp, src/gui/chat.cpp, 
	src/gui/guildwindow.cpp, src/gui/gui.cpp, src/CMakeLists.txt,
	src/net/guildhandler.cpp, src/net/chathandler.cpp, src/Makefile.am,
	tmw.cbp: Fixed numerous crashes with chat and guild windows using new
	tabbed area.

2008-04-17  David Athay  <ko2fan@gmail.com>

	* src/player.cpp, src/player.h, src/net/partyhandler.h,
	src/net/guildhandler.h, src/net/partyhandler.cpp,
	src/net/guildhandler.cpp, src/net/chatserver/party.cpp,
	src/net/chatserver/party.h, src/localplayer.h: Added basic party 
	support.
