@@ -1,0 +1,5 @@
+fontsdir = $(pkgdatadir)/data/fonts
+
+fonts_DATA = dejavusans.ttf
+
+EXTRA_DIST = $(fonts_DATA)
